<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="#FFFFFF">
    <ImageView
            android:id="@+id/carImageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/fw"
            android:scaleType="fitCenter"
            android:contentDescription="@string/car_image_desc"
    />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="top|center"
            android:layout_marginTop="16dp">
        <Button
                android:id="@+id/btnConfiguration"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:text="@string/configuration"
                android:textColorHighlight="#FFFFFF"
                android:textSize="15sp"
                android:layout_marginBottom="8dp"
                android:padding="5dp"
                android:backgroundTint="#959595"
                android:textColor="#FFFFFF"/>
        <Button
                android:id="@+id/btnHistoryLog"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:text="@string/history_log"
                android:textColorHighlight="#FFFFFF"
                android:textSize="15sp"
                android:layout_marginBottom="8dp"
                android:padding="5dp"
                android:backgroundTint="#959595"
                android:textColor="#FFFFFF"/>
        <Button
                android:id="@+id/btnAnalysis"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:text="@string/analysis"
                android:textColorHighlight="#FFFFFF"
                android:textSize="15sp"
                android:padding="5dp"
                android:textColor="#FFFFFF"
                android:backgroundTint="#959595"/>
    </LinearLayout>

</LinearLayout>