<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   android:layout_marginBottom="10dp"
                                   card_view:cardCornerRadius="10dp"
                                   card_view:cardElevation="6dp"
                                   android:layout_marginHorizontal="12dp"
                                   card_view:cardBackgroundColor="#FFEFEF"
                                   android:layout_marginTop="3dp">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:paddingBottom="100dp"
            android:orientation="vertical">
        <TextView
                android:id="@+id/textPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="#000000" tools:ignore="MissingConstraints"/>
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:paddingTop="17dp" tools:ignore="MissingConstraints">
            <TextView
                    android:id="@+id/textPower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/power"
                    android:textSize="12sp"
                    android:textColor="#000000"/>
            <TextView
                    android:id="@+id/textVoltage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/voltage"
                    android:textSize="12sp"
                    android:textColor="#000000"
                    android:paddingStart="10dp"/>
        </LinearLayout>

        <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/ic_delete"
                android:contentDescription="@string/delete"
                android:visibility="visible"
                android:scaleType="centerInside"
                android:padding="8dp"
                android:background="#FFEFEF"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>