<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".SettingsActivity"
        android:padding="16dp">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">
        <TextView
                android:id="@+id/labelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="24sp"
                android:textColor="#000000"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
                android:id="@+id/addButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_add"
                android:contentDescription="@string/add"
                android:scaleType="centerInside"
                android:padding="4dp"
                android:background="#FFFFFF"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewBulbs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:clipToPadding="false"
            android:layout_marginTop="42dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <!-- Bottom panel -->
    <LinearLayout
            android:id="@+id/buttonPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <Button
                android:id="@+id/btnCancel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColorHighlight="#FFFFFF"
                android:textColor="#FFFFFF"
                android:backgroundTint="#ABABAB"/>

        <Button
                android:id="@+id/btnApply"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/apply"
                android:layout_marginStart="16dp"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColorHighlight="#FFFFFF"
                android:textColor="#FFFFFF"
                android:backgroundTint="#ABABAB"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>